# rust_nes_emulator

./: Cargo.toml  LICENSE  README.md
snake/: Cargo.toml
snake/src/: main.rs
src/: lib.rs
src/bus/: mod.rs
src/cpu/: cpu.rs  mem.rs  mod.rs  opcodes.rs  opscode.rs
src/nes/: mod.rs
src/nes/bus/: mod.rs
src/nes/cpu/: mod.rs  opscode.rs  registers.rs
src/nes/ram/: mod.rs
src/nes/rom/: mod.rs
trace/: Cargo.toml
trace/src/: main.rs
